{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 23,
  "lineage": "96129223-1496-1633-9836-c2561acec2fd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "CI-CD_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333614442459:route-table/rtb-0011aa2f109eb1b52",
            "default_route_table_id": "rtb-0011aa2f109eb1b52",
            "id": "rtb-0011aa2f109eb1b52",
            "owner_id": "333614442459",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "CI-CD_private_rt"
            },
            "tags_all": {
              "Name": "CI-CD_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-032edb712fba3290a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.CI-CD-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "CI-CD_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9de6e2d2f067fca",
            "arn": "arn:aws:ec2:us-east-1:333614442459:instance/i-0f87a4ff227d310f4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f87a4ff227d310f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Key_For_CI-CD-proj",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e831a819917c4ad5",
            "private_dns": "ip-10-127-1-147.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.127.1.147",
            "public_dns": "ec2-54-234-242-89.compute-1.amazonaws.com",
            "public_ip": "54.234.242.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0002902822ce171d0",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef18dec5dc496cbe",
            "tags": {
              "Environment": "Production",
              "Name": "CI-CD_project"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "CI-CD_project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ad98ab16701a3acd"
            ]
          },
          "dependencies": [
            "aws_security_group.CI-CD_sg",
            "aws_subnet.CI-CD_pub_sub",
            "aws_vpc.CI-CD-vpc",
            "data.aws_ami.server_ami",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9de6e2d2f067fca",
            "arn": "arn:aws:ec2:us-east-1:333614442459:instance/i-0ef16e559711cd140",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef16e559711cd140",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Key_For_CI-CD-proj",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-039730a1b35aa4b56",
            "private_dns": "ip-10-127-1-74.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.127.1.74",
            "public_dns": "ec2-3-93-11-250.compute-1.amazonaws.com",
            "public_ip": "3.93.11.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-043824d9404829abc",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef18dec5dc496cbe",
            "tags": {
              "Environment": "Production",
              "Name": "CI-CD_project"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "CI-CD_project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ad98ab16701a3acd"
            ]
          },
          "dependencies": [
            "aws_security_group.CI-CD_sg",
            "aws_subnet.CI-CD_pub_sub",
            "aws_vpc.CI-CD-vpc",
            "data.aws_ami.server_ami",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "CI-CD_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333614442459:internet-gateway/igw-062067d0556b0095e",
            "id": "igw-062067d0556b0095e",
            "owner_id": "333614442459",
            "tags": {
              "Name": "CI-CD_igw"
            },
            "tags_all": {
              "Name": "CI-CD_igw"
            },
            "vpc_id": "vpc-032edb712fba3290a"
          },
          "dependencies": [
            "aws_vpc.CI-CD-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:333614442459:loadbalancer/app/test-lb-tf/f7eb55e856df6552",
            "arn_suffix": "app/test-lb-tf/f7eb55e856df6552",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf-790939829.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:333614442459:loadbalancer/app/test-lb-tf/f7eb55e856df6552",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ad98ab16701a3acd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-051322bd57f432f01"
              },
              {
                "subnet_id": "subnet-0ef18dec5dc496cbe"
              }
            ],
            "subnets": [
              "subnet-051322bd57f432f01",
              "subnet-0ef18dec5dc496cbe"
            ],
            "vpc_id": "vpc-032edb712fba3290a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.CI-CD_sg",
            "aws_subnet.CI-CD_pub_sub",
            "aws_vpc.CI-CD-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:333614442459:listener/app/test-lb-tf/f7eb55e856df6552/ad8e7a94ba90e696",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:333614442459:targetgroup/app-tg/e798e10d7da436ea",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:333614442459:listener/app/test-lb-tf/f7eb55e856df6552/ad8e7a94ba90e696",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:333614442459:loadbalancer/app/test-lb-tf/f7eb55e856df6552",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.app_tg",
            "aws_security_group.CI-CD_sg",
            "aws_subnet.CI-CD_pub_sub",
            "aws_vpc.CI-CD-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:333614442459:targetgroup/app-tg/e798e10d7da436ea",
            "arn_suffix": "targetgroup/app-tg/e798e10d7da436ea",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:333614442459:targetgroup/app-tg/e798e10d7da436ea",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:333614442459:loadbalancer/app/test-lb-tf/f7eb55e856df6552"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-032edb712fba3290a"
          },
          "dependencies": [
            "aws_vpc.CI-CD-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:333614442459:targetgroup/app-tg/e798e10d7da436ea-20250517173047327900000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:333614442459:targetgroup/app-tg/e798e10d7da436ea",
            "target_id": "i-0f87a4ff227d310f4"
          },
          "dependencies": [
            "aws_instance.CI-CD_instance",
            "aws_lb_target_group.app_tg",
            "aws_security_group.CI-CD_sg",
            "aws_subnet.CI-CD_pub_sub",
            "aws_vpc.CI-CD-vpc",
            "data.aws_ami.server_ami",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:333614442459:targetgroup/app-tg/e798e10d7da436ea-20250517173047699800000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:333614442459:targetgroup/app-tg/e798e10d7da436ea",
            "target_id": "i-0ef16e559711cd140"
          },
          "dependencies": [
            "aws_instance.CI-CD_instance",
            "aws_lb_target_group.app_tg",
            "aws_security_group.CI-CD_sg",
            "aws_subnet.CI-CD_pub_sub",
            "aws_vpc.CI-CD-vpc",
            "data.aws_ami.server_ami",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "CI-CD_public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-062067d0556b0095e",
            "id": "r-rtb-0102c83eb2e111dac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0102c83eb2e111dac",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.CI-CD_igw",
            "aws_route_table.CI-CD_public_rt",
            "aws_vpc.CI-CD-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "CI-CD_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333614442459:route-table/rtb-0102c83eb2e111dac",
            "id": "rtb-0102c83eb2e111dac",
            "owner_id": "333614442459",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-062067d0556b0095e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CI-CD_public_rt"
            },
            "tags_all": {
              "Name": "CI-CD_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-032edb712fba3290a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.CI-CD-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "CI-CD_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7ceed4a545782f6",
            "route_table_id": "rtb-0102c83eb2e111dac",
            "subnet_id": "subnet-0ef18dec5dc496cbe"
          },
          "dependencies": [
            "aws_route_table.CI-CD_public_rt",
            "aws_subnet.CI-CD_pub_sub",
            "aws_vpc.CI-CD-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06db55dc60ce65117",
            "route_table_id": "rtb-0102c83eb2e111dac",
            "subnet_id": "subnet-051322bd57f432f01"
          },
          "dependencies": [
            "aws_route_table.CI-CD_public_rt",
            "aws_subnet.CI-CD_pub_sub",
            "aws_vpc.CI-CD-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "CI-CD_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333614442459:security-group/sg-0ad98ab16701a3acd",
            "description": "Allow all inbound and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad98ab16701a3acd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "CI-CD_sg",
            "name_prefix": "",
            "owner_id": "333614442459",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CI-CD_sg"
            },
            "tags_all": {
              "Name": "CI-CD_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-032edb712fba3290a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.CI-CD-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "CI-CD_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2438677677",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ad98ab16701a3acd",
            "security_group_rule_id": "sgr-02d9009f91e99ec04",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.CI-CD_sg",
            "aws_vpc.CI-CD-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "CI-CD_ingress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-720676677",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ad98ab16701a3acd",
            "security_group_rule_id": "sgr-0765ef4f9956d262c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.CI-CD_sg",
            "aws_vpc.CI-CD-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CI-CD_priv_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333614442459:subnet/subnet-0060cdb947b33a410",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.127.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0060cdb947b33a410",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "333614442459",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CI-CD_priv_sub-1"
            },
            "tags_all": {
              "Name": "CI-CD_priv_sub-1"
            },
            "vpc_id": "vpc-032edb712fba3290a"
          },
          "dependencies": [
            "aws_vpc.CI-CD-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333614442459:subnet/subnet-0ce8366e0449dbb8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.127.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce8366e0449dbb8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "333614442459",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CI-CD_priv_sub-2"
            },
            "tags_all": {
              "Name": "CI-CD_priv_sub-2"
            },
            "vpc_id": "vpc-032edb712fba3290a"
          },
          "dependencies": [
            "aws_vpc.CI-CD-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CI-CD_pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333614442459:subnet/subnet-0ef18dec5dc496cbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.127.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef18dec5dc496cbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "333614442459",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CI-CD_pub_sub-1"
            },
            "tags_all": {
              "Name": "CI-CD_pub_sub-1"
            },
            "vpc_id": "vpc-032edb712fba3290a"
          },
          "dependencies": [
            "aws_vpc.CI-CD-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333614442459:subnet/subnet-051322bd57f432f01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.127.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051322bd57f432f01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "333614442459",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CI-CD_pub_sub-2"
            },
            "tags_all": {
              "Name": "CI-CD_pub_sub-2"
            },
            "vpc_id": "vpc-032edb712fba3290a"
          },
          "dependencies": [
            "aws_vpc.CI-CD-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "CI-CD-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:333614442459:vpc/vpc-032edb712fba3290a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.127.0.0/16",
            "default_network_acl_id": "acl-0a8f13369b9eeeb56",
            "default_route_table_id": "rtb-0011aa2f109eb1b52",
            "default_security_group_id": "sg-090acf7889abb7ae3",
            "dhcp_options_id": "dopt-06cd388166d17f6a8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-032edb712fba3290a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0011aa2f109eb1b52",
            "owner_id": "333614442459",
            "tags": {
              "Name": "CI-CD-vpc"
            },
            "tags_all": {
              "Name": "CI-CD-vpc"
            }
          }
        }
      ]
    }
  ]
}